# fullview

./: README.md
Todo/: .env  .gitignore  README.md  alembic.ini  pyproject.toml
Todo/alembic/: env.py
Todo/alembic/versions/: 199f2f468c8c_.py  310f1720b589_new_migrations.py  474645abe632_initial_migration.py  580da8633bfa_test_db.py  5c98bf46ca64_create_users_table.py  796854b1387c_new_revision.py  7cb34ef83ce9_test_db2.py  b4266055ebc3_update2.py  d2ef3aaf523e_.py  e166bacceaf7_.py  f2dec5bfa782_update.py
Todo/todo/: config.py  conftest.py  root_module.py  server.py
Todo/todo/db/: alembic.ini  database.py  models.py  test_models.py
Todo/todo/db/alembic/: env.py
Todo/todo/db/alembic/versions/: 26b9ff87ae2d_migration.py  4d412c138cc4_testing.py  89fafaf82579_testing.py  9085b251ab89_first_migration.py
Todo/todo/routine/: controllers.py  database.py  models.py  module.py  schemas.py  services.py
Todo/todo/routine/tests/: test_controllers.py
Todo/todo/user/: controllers.py  module.py  schemas.py  services.py
Todo/todo/user/tests/: test_controllers.py
