[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Justin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
alembic = "^1.12.0"
sqlalchemy = "^2.0.22"
ellar = "^0.5.1"
ellar-cli = "^0.2.2"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[ellar]
default = "todo"
[ellar.projects.todo]
project-name = "todo"
application = "todo.server:application"
config = "todo.config:DevelopmentConfig"
root-module = "todo.root_module:ApplicationModule"
